Mobile responsiveness improvements only

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+  
 <!-- ================= NAVBAR ================= -->
 <header class="navbar">
   <a href="index.html" class="logo-container">
@@ -15,13 +16,16 @@
     <span class="company-name">All in one Powertech Solutions Pvt. Ltd.</span>
   </a>
 
-  <nav>
+  <div class="menu-toggle" id="menu-toggle">☰</div>
+
+  <nav id="nav-menu">
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
     <a href="about.html">About</a>
-    <a href="contact.html" class="active">Contact</a>
+    <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 <!-- ================= CONTACT SECTION ================= -->
 <section class="section contact-wrapper">
