--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Allinonepowertechsolutions | Solar Power</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
+
+  
 <header class="navbar">
   <a href="index.html" class="logo-container">
     <img src="assets/images/company-logo.png" alt="Company Logo">
     <span class="company-name">All in one Powertech Solutions Pvt. Ltd.</span>
   </a>
 
-  <nav>
+  <div class="menu-toggle" id="menu-toggle">☰</div>
+
+  <nav id="nav-menu">
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 
 
