--- a/services.html
+++ b/services.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Services | CompanyName</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
 
+
+  
 <!-- ================= NAVBAR ================= -->
 <header class="navbar">
   <a href="index.html" class="logo-container">
@@ -15,13 +17,16 @@
     <span class="company-name">All in one Powertech Solutions Pvt. Ltd.</span>
   </a>
 
-  <nav>
+  <div class="menu-toggle" id="menu-toggle">☰</div>
+
+  <nav id="nav-menu">
     <a href="index.html">Home</a>
     <a href="services.html">Services</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
 </header>
+
 
 
 
